Update 'backend-tests-python-qxsjwbmn' component image to: quay.io/rhtap_qe/backend-tests-python-qxsjwbmn:0b31edbaf76ede0cd29d2ca3b6abc9fc05cf0c91@sha256:41e6bffb0c8a8e74fcbc5c009a18339ffcb903d57b509ea976e54c8aba96d6db

--- a/components/backend-tests-python-qxsjwbmn/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-python-qxsjwbmn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-python-qxsjwbmn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-python-qxsjwbmn:0b31edbaf76ede0cd29d2ca3b6abc9fc05cf0c91@sha256:41e6bffb0c8a8e74fcbc5c009a18339ffcb903d57b509ea976e54c8aba96d6db
+          name: container-image
